--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/weight_scale_interfaces
-	previous = 
-	base = fb397df
+	previous = fb397df
+	base = 91ff9be
 	trim = 
 	trimbase = 
